--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <form id="movie-form">
     <input type="text" id="title" placeholder="Title" required>
     <input type="number" id="rating" min="1" max="10" placeholder="Rating" required>
+    <input type="text" id="director" placeholder="Director" required>
     <button type="submit">Add Movie</button>
   </form>
 
