--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
     <button type="submit">Add Movie</button>
   </form>
 
-  <script src="script.js"></script>
+  <script src="script2.js"></script>
 </body>
 </html>
