--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   <h1>My Favorite Movies</h1>
   <div id="movie-list"></div>
 
-   <script src="script2.js"></script>
+   <script src="script.js"></script>
 </body>
 </html>
